# baligh

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  codeql.yml
docs/: DESIGN.md
docs/contracts/: gec-contract.md  ged-contract.md  nws-contract.md  preprocessing-contract.md  ranker-contract.md
src/: main.py
