[project]
name = "baligh"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
  "ruff>=0.11.0",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
